--- a/build.yaml
+++ b/build.yaml
@@ -130,8 +130,11 @@ TaskHeader: |
   Write-Build DarkGray "  $($Task.InvocationInfo.ScriptName):$($Task.InvocationInfo.ScriptLineNumber)"
   ""
 
-
-
-
-
-
+GitHubConfig:
+  GitHubFilesToAdd:
+    - 'CHANGELOG.md'
+  ReleaseAssets:
+    - output/WikiContent.zip
+  GitHubConfigUserName: SimonWahlin
+  GitHubConfigUserEmail: 5576847+SimonWahlin@users.noreply.github.com
+  UpdateChangelogOnPrerelease: false
