--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+    - name: Set safe directory
+      run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
     - name: Checkout Code
       uses: actions/checkout@v4
       with:
